# real-estate

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/config/: settings.py  urls.py
app/realty/: admin.py  models.py  serializers.py  views.py
app/realty/admin/: BuildingAdmin.py  FlatAdmin.py  FloorAdmin.py  ProjectAdmin.py  SectionAdmin.py  __init__.py
app/realty/migrations/: 0001_initial.py  0002_floor_alter_flat_floor.py  0003_section_flat_section.py  0004_building_address_building_flats_number_and_more.py  0005_alter_building_address_alter_building_flats_number_and_more.py  0006_remove_building_flats_number_and_more.py  0007_remove_flat_settlement_before_and_more.py  0008_alter_building_address_and_more.py  0009_project_description.py  0010_plan_remove_flat_area_remove_flat_kitchen_area_and_more.py  0011_building_image_alter_flat_plan_alter_plan_image.py  0012_alter_flat_options_alter_section_options_and_more.py  0013_alter_building_options_alter_floor_options_and_more.py
app/realty/models/: Building.py  Flat.py  Floor.py  Plan.py  Project.py  Realty.py  Section.py  __init__.py
app/realty/repository/: BuildingRep.py  FlatRep.py  FloorRep.py
app/realty/views/: BuildingViews.py  BuildingsViews.py  FlatViews.py  FlatsViews.py  FloorViews.py  ProjectViews.py  __init__.py
